# satellite-vision-segmentation

./: .gitignore  LICENSE  README.md  best_unet_model.pth  building_segmentation.ipynb  pyproject.toml  segmentation_homework.ipynb
utils/: Siamese_UNet.py  generate_annotation_masks.py  mask_polygons.py  metrics.py  metrics_gpu.py  split_into_disasters.py  split_into_train_test.py  xBD_Dataset.py
