[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cup>=3.2.31",
    "geopandas>=1.1.3",
    "imantics>=0.1.12",
    "imgaug>=0.4.0",
    "imutils>=0.5.4",
    "ipython>=9.13.0",
    "keras>=3.14.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas==2.2.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "simplification>=0.7.16",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
